<resources>
    <string name="app_name">News App</string>

    <string name="no_news">No news found.</string>

    <string name="no_internet_connection">No internet connection.</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>



    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_category_label">Category</string>
    <string name="settings_category_key" translatable="false">category</string>
    <string name="settings_category_default" translatable="false">news</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_category_art_label">Art and Design</string>
    <string name="settings_category_art_value" translatable="false">artanddesign</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_category_books_label">Books</string>
    <string name="settings_category_books_value" translatable="false">books</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_category_business_label">Business</string>
    <string name="settings_category_business_value" translatable="false">business</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_category_culture_label">Culture</string>
    <string name="settings_category_culture_value" translatable="false">culture</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_category_fashion_label">Fashion</string>
    <string name="settings_category_fashion_value" translatable="false">fashion</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_category_film_label">Film</string>
    <string name="settings_category_film_value" translatable="false">film</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_category_news_label">News</string>
    <string name="settings_category_news_value" translatable="false">news</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_category_science_label">Science</string>
    <string name="settings_category_science_value" translatable="false">science</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_category_sport_label">Sport</string>
    <string name="settings_category_sport_value" translatable="false">sport</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_category_travel_label">Travel</string>
    <string name="settings_category_travel_value" translatable="false">travel</string>



    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">newest</string>

    <!-- Label for order-by magnitude option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for order-by most recent option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>


    <string name="settings_date_label">No older than</string>
    <string name="settings_date_key" translatable="false">date</string>
    <string name="settings_date_default" translatable="false">2016-01-01</string>


    <string name="settings_words_label">Containing words</string>
    <string name="settings_words_key" translatable="false">words</string>
    <string name="settings_words_default" translatable="false"></string>
</resources>
