<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_category_default"
        android:entries="@array/settings_category_labels"
        android:entryValues="@array/settings_category_values"
        android:key="@string/settings_category_key"
        android:title="@string/settings_category_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_date_default"
        android:inputType="date"
        android:key="@string/settings_date_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_date_label" />


    <EditTextPreference
        android:defaultValue="@string/settings_words_default"
        android:inputType="text"
        android:key="@string/settings_words_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_words_label" />

</PreferenceScreen>